[gd_scene load_steps=5 format=2]

[ext_resource path="res://Img/Bullet6.png" type="Texture" id=1]
[ext_resource path="res://Entity/Arme/Balles/Balle4.gd" type="Script" id=2]
[ext_resource path="res://Boxes/Hitboxe.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 3 )

[node name="Balle4" type="RigidBody2D"]
script = ExtResource( 2 )

[node name="Bullet6" type="Sprite" parent="."]
position = Vector2( 0.0136826, -3.03928e-08 )
rotation = 1.57079
scale = Vector2( 0.751686, 1.40754 )
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 1, 0.3 )

[node name="Hitboxe" parent="." instance=ExtResource( 3 )]
collision_layer = 32
collision_mask = 17

[node name="CollisionShape2D" parent="Hitboxe" index="0"]
shape = SubResource( 1 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Hitboxe" to="." method="_on_Hitboxe_area_entered"]
[connection signal="body_entered" from="Hitboxe" to="." method="_on_Hitboxe_body_entered"]

[editable path="Hitboxe"]
